--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,10 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-reqwest = { version = "0.11", features = ["json"] }
-tokio = { version = "1", features = ["full"] }
+headless_chrome = "1.0.10"
+tokio = { version = "1.0", features = ["full"] }
 dotenv = "0.15"
-structopt = "0.3"
 chrono = "0.4"
-serde_json = "1.0"
+structopt = "0.3"
+anyhow = "1.0"
+urlencoding = "2.1.0"
